# fsv4

./: .gitignore  AUTHORS  BUGS  CLAUDE.md  ChangeLog  Makefile.in  README.md  TODO.3  TODO.md  fsvrc.sample  fsvrc.sample-old  meson.build  meson_options.txt
debug/: Makefile.in  debug.c  debug.h  meson.build
lib/: Makefile.in  meson.build
src/: Makefile.in  about.c  about.h  animation.c  animation.h  callbacks.c  callbacks.h  camera.c  camera.h  colexp.c  colexp.h  color.c  color.h  common.c  common.h  dialog.c  dialog.h  dirtree.c  dirtree.h  filelist.c  filelist.h  frameprof.c  frameprof.h  fsv.c  fsv.h  fsv3d.h  geometry.c  geometry.h  glmath.c  glmath.h  gui.c  gui.h  lazy_render.c  lazy_render.h  ogl.c  ogl.h  scanfs.c  scanfs.h  search.c  search.h  (+11 more)
src/icons/: fsv.gresource.xml
